<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="capture_title_howto">How to scan a face</string>
    <string name="capture_title_previewing">Preparing to scan</string>
    <string name="capture_title_looks_good">Scan is ready!</string>
    <string name="capture_error_no_face">Make sure the face fills the circle</string>
    <string name="capture_error_face_too_far">Move closer</string>
    <string name="capture_error_face_too_close">Move back</string>
    <string name="capture_error_look_straight">Make sure the person is looking straight at the camera</string>
    <string name="capture_ready">Ready to capture</string>
    <string name="capture_prep_begin_btn">Tap to capture</string>
    <string name="capture_prep_begin_btn_capturing">Capturing…</string>
    <string name="capture_title_scan_progress">Scan in progress</string>
    <string name="capture_hold">Hold the position…</string>
    <string name="capture_debug_features" translatable="false">Yaw: %s\nRoll: %s\n</string>

    <string name="captured_successfully">Face has been successfully captured.</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_capturing">Live Capture</string>
    <string name="title_preparation">Preparation</string>

    <string name="btn_recapture">Recapture</string>
    <string name="btn_finish">Tap to continue</string>
    <string name="btn_capture_again">Capture again</string>
    <string name="captured_unsuccessful">Couldn\'t capture the face due to technical issue.</string>
    <string name="retry_tips">Here’s how you can fix the issue: \n\n1. Make sure you are in a well lighted space.\n2. Make sure the person is looking straight.\n3. Stay still and hold the position.</string>
    <string name="onboarding_light">Find a well-lighted place.</string>
    <string name="onboarding_fill">Fill the face in the circle frame.</string>
    <string name="onboarding_straight">Make sure the person is looking straight.</string>
    <string name="onboarding_continue">Tap anywhere to continue</string>
    <string name="capture_title_look_straight">Not looking straight</string>
    <string name="capture_title_no_face">No face detected</string>
    <string name="capture_title_too_close">Too close</string>
    <string name="capture_title_face_too_far">Too far</string>
    <string name="matching_x_records">Matching against %s records</string>
    <string name="why_did_you_skip_face_capture">Why did you skip face capture?</string>
    <string name="exit_form_return_to_face_capture">Capture face</string>

    <!--  Matching activity  -->
    <string name="face_match_please_wait">Please wait while we proceed to identification</string>
    <string name="face_match_loading_candidates">Loading candidates…</string>
    <string name="face_match_matching_candidates">Matching candidates</string>
    <string name="face_match_matched_candidates_quantity_key" translatable="false">face_match_matched_candidates</string>
    <string name="face_match_matched_candidates_one">Compared to %d candidate.</string>
    <string name="face_match_matched_candidates_other">Compared to %d candidates.</string>

    <string name="face_match_returned_results_quantity_key" translatable="false">face_match_returned_results</string>
    <string name="face_match_returned_results_one">Returned %d results.</string>
    <string name="face_match_returned_results_other">Returned %d results.</string>
    <string name="face_match_tier1or2_matches_quantity_key" translatable="false">face_match_tier1or2_matches</string>
    <string name="face_match_tier1or2_matches_zero">No very good matches</string>
    <string name="face_match_tier1or2_matches_one">%d very good match</string>
    <string name="face_match_tier1or2_matches_other">%d very good matches</string>
    <string name="face_match_tier3_matches_quantity_key" translatable="false">face_match_tier3_matches</string>
    <string name="face_match_tier3_matches_zero">No good matches</string>
    <string name="face_match_tier3_matches_one">%d good match</string>
    <string name="face_match_tier3_matches_other">%d good matches</string>
    <string name="face_match_tier4_matches_quantity_key" translatable="false">face_match_tier4_matches</string>
    <string name="face_match_tier4_matches_zero">No matches</string>
    <string name="face_match_tier4_matches_one">%d match</string>
    <string name="face_match_tier4_matches_other">%d matches</string>

    <!--  Error screens  -->
    <string name="error_licence_invalid_title">License invalid</string>
    <string name="error_licence_invalid_message">Face license is invalid, please contact your system administrator</string>
    <string name="error_close_button">Close</string>
    <string name="error_licence_missing_title">License missing</string>
    <string name="error_licence_missing_message">Face license is missing, please contact your system administrator</string>
    <string name="error_configuration_error_title">Configuration error</string>
    <string name="error_configuration_error_message">There was an error while configuring face modality, please contact your system administrator</string>
    <string name="error_unexpected_error_title">Error occurred</string>
    <string name="error_unexpected_error_message">Please try again and if Simprints does not work contact your system administrator</string>

    <!--  Configuration screens  -->
    <string name="face_configuration_started">Configuring face modality</string>
    <string name="face_configuration_downloading">Downloading necessary files</string>
</resources>
