<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_white"
    tools:context=".capture.FaceCaptureActivity">

    <TextView
        android:id="@+id/retry_confirmation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_confirmation"
        android:textAllCaps="true"
        android:textColor="#cc384553"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/retry_img"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:src="@drawable/ic_exclamation_92dp"
        app:layout_constraintBottom_toTopOf="@id/layout_retry_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/retry_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/captured_unsuccessful"
        android:textColor="#384553"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/layout_retry_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retry_img"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_retry_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#19a2afbd"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/retry_tips_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/retry_tips"
            android:textColor="#384553"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@drawable/capture_btn_bg"
        android:text="@string/btn_capture_again"
        android:textColor="@color/simprints_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>