<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detection_onboarding_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".capture.livefeedback.StaticPreparationFragment">

    <ImageView
        android:id="@+id/detection_onboarding_light_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/onboarding_light"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_light_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/detection_onboarding_light_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/onboarding_light"
        android:textColor="@color/simprints_white"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_fill_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_light_img" />

    <ImageView
        android:id="@+id/detection_onboarding_fill_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_fill"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_fill_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_light_txt" />

    <TextView
        android:id="@+id/detection_onboarding_fill_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/onboarding_fill"
        android:textColor="@color/simprints_white"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_straight_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_fill_img" />

    <ImageView
        android:id="@+id/detection_onboarding_straight_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_straight"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_straight_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_fill_txt" />

    <TextView
        android:id="@+id/detection_onboarding_straight_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/onboarding_straight"
        android:textColor="@color/simprints_white"
        app:layout_constraintBottom_toTopOf="@id/detection_onboarding_txt_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_straight_img" />

    <TextView
        android:id="@+id/detection_onboarding_txt_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/onboarding_continue"
        android:textColor="@color/simprints_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detection_onboarding_straight_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>
